--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+*,
+*::before,
+*::after,
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  color: var(--dark-color);
+  background-color: var(--bg-color);
+  margin: 0;
+  padding: 0;
 }
