--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ html {
 body {
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
-  color: var(--dark-color);
-  background-color: var(--bg-color);
+  color: #111;
+  background-color: #f0f0f0;
   margin: 0;
   padding: 0;
 }
