--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,11 @@ html {
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 500;
+  font-size: 0.8rem;
   color: #111;
   background-color: #f0f0f0;
   margin: 0;
-  padding: 0;
+  padding: 32px;
 }
