--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 500;
   font-size: 0.8rem;
-  color: #111;
-  background-color: #f0f0f0;
   margin: 0;
-  padding: 48px;
+  padding: 0;
 }
