--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,26 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* CUSTOM SCROLL BAR */
+::-webkit-scrollbar {
+  width: 16px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 10px;
+  /* background-color: transparent; */
+  background-color: #aaa;
+}
+
+/* div:hover::-webkit-scrollbar-thumb {
+  background-color: #333;
+} */
