--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,10 @@ body {
   border: 4px solid rgba(0, 0, 0, 0);
   background-clip: padding-box;
   border-radius: 10px;
-  /* background-color: transparent; */
-  background-color: #aaa;
+  background-color: transparent;
+  /* background-color: #aaa; */
 }
 
-/* div:hover::-webkit-scrollbar-thumb {
-  background-color: #333;
-} */
+div:hover::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+}
